--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+
+
 		<dependency>
-		
+			<groupId>io.hypersistence</groupId>
+			<artifactId>hypersistence-utils-hibernate-63</artifactId>
+			<version>3.7.5</version>
+		</dependency>
+
+		<dependency>
 		<groupId>com.geta</groupId>
 			<artifactId>utils</artifactId>
 			<version>1.0</version>
